--- a/Milestone 02/Module 8/simple-responsive-examples/styles/collage.css
+++ b/Milestone 02/Module 8/simple-responsive-examples/styles/collage.css
@@ -20,7 +20,7 @@ img{
     gap: 5px;
 }
 
-/* Module 8-3 Part 1 */
+/* Note: Module 8-3 Part 1 */
 
 /* Responsive Media Query */
 @media screen and (max-width:576px) {
