--- a/Milestone 02/Module 09/g3-architects-website/styles/architects.css
+++ b/Milestone 02/Module 09/g3-architects-website/styles/architects.css
@@ -104,6 +104,34 @@ main > section{
 #quick-list{
     font-weight: 500;
 }
+/* Fact Related Styles */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+    border: 1px solid rgba(255, 144, 14, 1);
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px8105;
+}
+.fact-description{
+    max-width: 540px;
+}
 /* Responsive Media Query */
 @media screen and (max-width: 576px) {
     .navbar, 
