--- a/Milestone 02/Module 08/responsive-web-dev-portfolio/styles/portfolio.css
+++ b/Milestone 02/Module 08/responsive-web-dev-portfolio/styles/portfolio.css
@@ -192,16 +192,47 @@ footer input[type="text"], footer input[type="email"], footer textarea{
     display: none;
 }
 @media screen and (max-width: 576px) {
-    .skills-container, .resume-container, footer{
+    .skills-container, 
+    .resume-container, 
+    .banner,
+    footer, 
+    nav,
+    nav > ul,
+    .about-items{
         flex-direction: column;
     }
-    footer{
+    nav > ul{
+        gap: 10px;
+    }
+    .btn-primary{
+        margin-bottom: 20px;
+    }
+    .banner{
+        margin: 20px;
+    }
+    .header{
+        background-image: none;
+    }
+    footer, 
+    .about{
         padding: 20px;
     }
     .footer-column{
         width: 100%;
     }
-    footer input[type="text"], footer input[type="email"], footer textarea{
+    footer input[type="text"], 
+    footer input[type="email"], 
+    footer textarea{
         width: calc(100% - 40px);
+    }
+    .banner-profile-picture{
+        width: 100%;
+    }
+}
+/* Module 8-8 */
+/* Tablet-Specific Media Query */
+@media screen and (min-width: 576px) and (max-width:990px) {
+    .banner{
+        flex-direction: column;
     }
 }
