--- a/Milestone 02/Module 09/g3-architects-website/styles/architects.css
+++ b/Milestone 02/Module 09/g3-architects-website/styles/architects.css
@@ -104,6 +104,26 @@ main > section{
 #quick-list{
     font-weight: 500;
 }
+/* Feature Related Styles */
+.features{
+    gap: 140px;
+}
+#feature-section-title{
+    border-left: 5px solid rgba(255, 144, 14, 1);
+    padding-left: 21px;
+}
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+.feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 /* Fact Related Styles */
 .facts-container{
     display: grid;
