--- a/Milestone 02/Module 09/g3-architects-website/styles/architects.css
+++ b/Milestone 02/Module 09/g3-architects-website/styles/architects.css
@@ -59,9 +59,9 @@ main > section{
     font-weight: 700;
     font-size: 3rem;
 }
-.nav-links{
+/* .nav-links{
     
-}
+} */
 .nav-item{
     list-style: none;
     margin-right: 30px;
@@ -124,6 +124,20 @@ main > section{
     margin-top: 0px;
     margin-bottom: 0px;
 }
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.featured-architect img{
+    width: 100%;
+}
 /* Fact Related Styles */
 .facts-container{
     display: grid;
@@ -168,7 +182,7 @@ main > section{
 /* Medium Size Device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
     /* Team Section */
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }  
     .facts-container,
@@ -181,11 +195,16 @@ main > section{
     .our-features{
         margin-left: 50px auto;
     }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
 /* Responsive Media Query */
 @media screen and (max-width: 576px) {
     .navbar, 
     .nav-links,
+    .features,
     .teams{
         flex-direction: column;
     }
@@ -204,5 +223,9 @@ main > section{
     }
     .our-features{
         margin-left: 20px;
+    }
+    #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
     }
 }
